--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                         <path d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
                                         </svg>
                                     </button>
-                                    <div class="divider"></div>
+                                    <div class="arrow__divider"></div>
                                     <button class="testimonial__button">
                                         <svg class="testimonial__arrow" fill="none" stroke="rgb(100,21,255)" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" viewBox="0 0 24 24">
                                         <path d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
@@ -377,6 +377,64 @@
             </div>
         </section>
     </main>
+    <footer id="footer">
+        <div class="container">
+            <div class="row row--footer">
+                <div class="links">
+                    <div class="link">
+                        <div class="link__title">MAIN</div>
+                        <a class="footer__link" href="">Blog</a>
+                        <a class="footer__link" href="">FAQs</a>
+                        <a class="footer__link" href="">Support</a>
+                        <a class="footer__link" href="">About Us</a>
+                    </div>
+                    <div class="link">
+                        <div class="link__title">PRODUCT</div>
+                        <a class="footer__link" href="">Log In</a>
+                        <a class="footer__link" href="">Personal</a>
+                        <a class="footer__link" href="">Business</a>
+                        <a class="footer__link" href="">Team</a>
+                    </div>
+                    <div class="link">
+                        <div class="link__title">PRESS</div>
+                        <a class="footer__link" href="">Logos</a>
+                        <a class="footer__link" href="">Events</a>
+                        <a class="footer__link" href="">Stories</a>
+                        <a class="footer__link" href="">Office</a>
+                    </div>
+                    <div class="link">
+                        <div class="link__title">TEAM</div>
+                        <a class="footer__link" href="">Career</a>
+                        <a class="footer__link" href="">Founders</a>
+                        <a class="footer__link" href="">Culture</a>
+                        <a class="footer__link" href="">Onboarding</a>
+                    </div>
+                    <div class="link">
+                        <div class="link__title">LEGAL</div>
+                        <a class="footer__link" href="">GDPR</a>
+                        <a class="footer__link" href="">Privacy Policy</a>
+                        <a class="footer__link" href="">Terms of Service</a>
+                        <a class="footer__link" href="">Disclaimer</a>
+                    </div>
+                </div>
+                <div class="footer__divider"></div>
+                <div class="footer__info">
+                    <div class="footer__logo--wrapper">
+                        <div class="footer__logo">
+                            <img class="footer__img" src="./assets/logo-light.svg" alt="">
+                            <div class="footer__text">Treact Inc.</div>
+                        </div>
+                    </div>
+                    <div class="footer__copyright">© 2018 Treact Inc. All Rights Reserved.</div>
+                    <div class="footer__social">
+                        <a class="footer__social--link" href=""></a>
+                        <a class="footer__social--link" href=""></a>
+                        <a class="footer__social--link" href=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
