--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 </figure>
                                 <div class="service__para--wrapper">
                                     <h3 class="service__title">Secure</h3>
-                                    <p class="service__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim repellat dolore perspiciatis similique consequuntur facere delectus voluptatem sed voluptate blanditiis.</p>  
+                                    <p class="service__para">We strictly only deal with vendors that provide top notch security.</p>  
                                 </div>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                                 </figure>
                                 <div class="service__para--wrapper">
                                     <h3 class="service__title">24/7 Support</h3>
-                                    <p class="service__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti provident vel quidem tempore numquam soluta repellat, sit ipsa dolorum! Repellendus?</p>  
+                                    <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>  
                                 </div>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                                 </figure>
                                 <div class="service__para--wrapper">
                                     <h3 class="service__title">Customizable</h3>
-                                    <p class="service__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse obcaecati molestiae aliquid ex nesciunt voluptatibus assumenda excepturi animi velit quod.</p>  
+                                    <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>  
                                 </div>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                                 </figure>
                                 <div class="service__para--wrapper">
                                     <h3 class="service__title">Reliable</h3>
-                                    <p class="service__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti harum expedita quisquam dolorem error quia est impedit velit ullam numquam!</p>  
+                                    <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>  
                                 </div>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                                 </figure>
                                 <div class="service__para--wrapper">
                                     <h3 class="service__title">Fast</h3>
-                                    <p class="service__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo enim laboriosam modi hic tenetur ipsa voluptas eaque similique animi sequi?</p>  
+                                    <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>  
                                 </div>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                                 </figure>
                                 <div class="service__para--wrapper">
                                     <h3 class="service__title">Easy</h3>
-                                    <p class="service__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellendus, error vero aliquid amet commodi quaerat consectetur a esse quas.</p>  
+                                    <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>  
                                 </div>
                             </div>
                         </div>
