--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                             <span class="sign__text">Sign Up</span>
                         </button>
                     </ul>
+                    <button class="btn__menu purple">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="btn__menu--svg">
+                        <line x1="3" y1="12" x2="21" y2="12"></line>
+                        <line x1="3" y1="6" x2="21" y2="6"></line>
+                        <line x1="3" y1="18" x2="21" y2="18"></line>
+                    </svg>
+                    </button>
                 </div>
             </div>
         </div>
@@ -63,7 +70,7 @@
     <main>
         <section id="features">
             <div class="container">
-                <div class="row">
+                <div class="row features__row">
                     <div class="features">
                         <Span class="titles">FEATURES</Span>
                         <h1 class="feature__service">We have Amazing <span class="purple">Service</span></h1>
