--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="header">
-        <div class="row">
+        <div class="row header__row">
             <div class="nav">
                 <div class="nav__logo">
                     <img class="nav__logo--img" src="./assets/logo-dark.svg" alt="">
